[package]
name = "esmdoc"
version = "0.1.0"
authors = ["Vladimir Guguiev <wizardzloy@gmail.com>"]
edition = "2018"
repository = "https://github.com/vovacodes/esmdoc"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
anyhow = "1.0.41"
deno_doc = "0.7.0"
futures = "0.3.15"
js-sys = "0.3.51"
swc_ecmascript = "0.44.0"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.24"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
